# tauri-template

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
scripts/: build.js  dev.js  vite.config.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src-view/: Cargo.toml  Trunk.toml  index.html  index.scss  index.ts  shim.d.ts  splashscreen.html  tauri.d.ts
src-view/cfg/: index.ts
src-view/common/: audio.ts  globalComponent.ts  h.ts  net.ts  proxy.ts  router.ts  socket.ts  window.ts
src-view/js/: window.js
src-view/router/: index.ts
src-view/router/modular/: page.ts
src-view/scripts/: build.js  dev.js  vite.config.js
src-view/src/: index.ts  main.rs  window.rs
src-view/src/common/: window.ts
src-view/src/router/: index.ts
src-view/src/router/modular/: page.ts
src-view/src/store/: index.ts
src-view/src/views/pages/about/: index.tsx
src-view/src/views/pages/index/: index.tsx
src-view/src/views/style/: index.ts
src-view/store/: index.ts
src-view/utils/: index.ts
src-view/views/components/content/: index.tsx  test1.tsx  test2.tsx
src-view/views/components/head/: index.tsx
src-view/views/components/head/scss/: index.lazy.scss
src-view/views/components/head/style/: index.ts
src-view/views/pages/about/: index.tsx
src-view/views/pages/about/scss/: index.lazy.scss
src-view/views/pages/about/style/: index.ts
src-view/views/pages/index/: index.tsx
src-view/views/pages/index/scss/: index.lazy.scss
src-view/views/pages/index/style/: index.ts
(+1 files in other folders)
